2000-12-05  Max Horn  <max@quendi.de>
	* ucmachine.h: fixed delete -> delete []

2000-12-05  Tristan Tarrant <nadir@users.sourceforge.net>
	* audio/pcb.h: Fix possible race condition in produce()
	* audio/midi_drivers/Timidity_binary.*: use pthreads instead of SDL's
	  own, so that we can join properly. Reworked entire forking strategy.
	  This should fix most problems (all?)
	* game.cc: stop music at appropriate places

2000-12-05  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* cheat.cc: heal party also cures poison and removes hunger

2000-12-05  Tristan Tarrant <nadir@users.sourceforge.net>
	* INSTALL: more details
	* TODO: a few ideas

2000-12-04  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* exult.cc, cheat.h/cc: added ctrl-alt-h = resurrect and heal party.
	* various: changed lots of unsigned char* to uint*, added some std::toupper
	* Makefile.be: minor change
	* actors.cc: fixed blackrock-explosion bug

2000-12-03  Max Horn  <max@quendi.de>
	* various files: added missing using std::
	* xmlparse.cc: made handling of XML entities more efficient and support all 5 required XML entities
	* Text_gump.cc: fixed delete -> delete []

2000-12-03  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* objs/.cvsignore: added

2000-12-03  Dancer Vesperman <dancer@users.sourceforge.net>
	* Clean up audio-streams before terminating.
	* Discovered a bug with termination of timidity. SIGPIPE is getting masked out. NOT FIXED YET. popen() looks like the wrong way to go.

2000-12-02  Willem Jan Palenstijn  <palenstijn@wanadoo.nl>
	* File_gump.cc: fixed initial state of sound buttons

2000-12-01  Jeff Freedman  <jeff@amy.nerble.net>
	* Create 'objs' subdirectory.
	* Fixed bug with crystal ball on larger windows.
	* Intrinsic 0x8f also seems to be start_speech().

2000-12-01  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* exult.cc: Ctrl-P: repaint screen, P: use lockpick
	* configure.in: added -Wno-long-long as default option